--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,2 @@
 /Builds/MacOSX/build/*
-/Builds/MacOSX/delay-3.xcodeproj/project.xcworkspace/xcuserdata/ryanbahan.xcuserdatad/UserInterfaceState.xcuserstate
+/Builds/MacOSX/delay-3.xcodeproj/project.xcworkspace/xcuserdata/ryanbahan.xcuserdatad/*
